# flags

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .travis.yml  BUILD  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  example.cc
.github/workflows/: bazel-multi-platform.yml  blaze-multi-platform.yml  cmake-multi-platform.yml  msvc.yml
xdk/flags/: BUILD  CMakeLists.txt  flags.h  flags_test.cc
